--- a/new.html
+++ b/new.html
@@ -8,6 +8,7 @@
 <body>
      <main>
          <h1>welcome to clone base</h1>
+         <h2>welcome to clone base</h2>
      </main>
 </body>
 </html>
